# ciccio-s

./: .gitignore  Makefile.am  README.md  configure.ac  kokkos-ciccios-abc.xmg
config/: asm_inspect.sh  bootstrap
m4/: ax_generate_assembly.m4
projects/: Makefile.am  main.cpp
src/: Base.hpp  DataTypes.hpp  Expr.hpp  Fields.hpp  Gpu.hpp  Makefile.am  Tensors.hpp  Threads.hpp  base.hpp  ciccio-s.hpp  config.hpp.in  dataTypes.hpp
src/base/: Makefile.am  debug.cpp  debug.hpp  environment.cpp  environment.hpp  feature.hpp  inliner.hpp  logger.cpp  logger.hpp  memoryManager.cpp  memoryManager.hpp  memory_manager.cpp  memory_manager.hpp  metaProgramming.hpp  preprocessor.hpp  ranks.cpp  ranks.hpp  timings.hpp  unroll.hpp
src/dataTypes/: SIMD.hpp  SU3.hpp  arithmeticTensor.hpp  complex.hpp  gaugeConf.hpp  su3.hpp  su3Field.hpp
src/expr/: assign.hpp  expr.hpp  exprArg.hpp  exprDecl.hpp  exprImpl.hpp  product.hpp  subtassignTheProduct.hpp  summassignTheProduct.hpp
src/fields/: field.hpp  fieldComponents.hpp  fieldDecl.hpp  fieldImpl.hpp  fieldTensProvider.hpp  fieldTraits.hpp
src/gpu/: Makefile.am  cuda.cpp  cuda.hpp  cudaMacros.hpp
src/tensors/: baseTens.hpp  complSubscribe.hpp  component.hpp  componentSignature.hpp  componentSize.hpp  componentsList.hpp  offset.hpp  reference.hpp  storage.hpp  subscribe.hpp  tens.hpp  tensDecl.hpp  tensFeat.hpp  tensImpl.hpp  tensRef.hpp  tensSlice.hpp  tensor.hpp  tensorImpl.hpp
src/threads/: Makefile.am  mutex.hpp  pool.cpp  pool.hpp  tBarrier.hpp
src/utilities/: math.hpp  tuple.hpp  valueWithExtreme.hpp
